# zeno-helsinki

./: .gitignore  CMakeLists.txt  README.md  Todo.md  main.cpp  oldreadme.txt
app/: CMakeLists.txt
app/Pong/: CMakeLists.txt  Pong.cpp  PongConfig.hpp  PongConfig.hpp.in
app/Pong/data/: config.json
app/Pong/data/shaders/: composite.frag  entity.vert  fullscreen_sample.vert  sdf.frag  text.frag  text.vert
app/Pong/include/: EntityComponent.hpp  EntityPushConstantObject.hpp  PongConstants.hpp  PongEngineScene.hpp  PongTitleEngineScene.hpp
app/Pong/include/Components/: EntityComponent.hpp
app/Pong/include/EngineCandidates/: CollisionData.hpp  CollisionEvent.hpp
app/Pong/include/Events/: PointScoredEvent.hpp
app/Pong/include/Systems/: BallMovementSystem.hpp  PaddleComputerControlSystem.hpp  PaddlePlayerControlSystem.hpp
app/Pong/src/: PongEngineScene.cpp  PongTitleEngineScene.cpp
app/Pong/src/Systems/: BallMovementSystem.cpp  PaddleComputerControlSystem.cpp  PaddlePlayerControlSystem.cpp
app/Renderpasses/: CMakeLists.txt  Renderpasses.cpp  RenderpassesConfig.hpp  RenderpassesConfig.hpp.in
app/Renderpasses/data/: config.json
app/Renderpasses/data/models/: plane.mtl  satelliteDish_detailed.mtl  turret_double.mtl
app/Renderpasses/data/shaders/: basic_pbr.frag  basic_pbr.vert  compileshaders.bat  material_pbr.frag  material_pbr.vert  post_process.frag  post_process.vert  skybox.frag  skybox.vert  ui.frag  ui.vert
app/Renderpasses/include/: RenderpassesApplication.hpp  RenderpassesConfig.hpp
app/Renderpasses/src/: RenderpassesApplication.cpp
app/Skeleton/: CMakeLists.txt  Skeleton.cpp  SkeletonConfig.hpp  SkeletonConfig.hpp.in
app/Skeleton/data/: config.json
app/Skeleton/data/models/: turret_double.mtl
app/Skeleton/data/shaders/: fullscreen_sample.frag  material_pbr.vert  post_process.frag  skybox.vert
app/Skeleton/include/: SkeletonEngineScene.hpp
app/Skeleton/src/: SkeletonEngineScene.cpp
app/TwoDimensional/: CMakeLists.txt  TwoDimensional.cpp  TwoDimensionalConfig.hpp  TwoDimensionalConfig.hpp.in  TwoDimensionalEngineScene.cpp  TwoDimensionalEngineScene.hpp
app/TwoDimensional/data/: config.json
app/TwoDimensional/data/fonts/: consola.config  consolab.config
app/TwoDimensional/data/shaders/: sdf.frag  sprites.frag  sprites.vert  text.frag  text.vert
app/UserInterface/: CMakeLists.txt  UserInterface.cpp  UserInterfaceConfig.hpp.in
app/UserInterface/data/: config.json
app/UserInterface/data/fonts/: roboto.config
app/UserInterface/data/shaders/: ui.frag  ui.vert
app/UserInterface/include/: UserInterfaceStartEngineScene.hpp
app/UserInterface/include/Candidates/: UiRect.hpp  UiRoot.hpp
app/UserInterface/src/: UserInterfaceStartEngineScene.cpp
app/UserInterface/src/Candidates/: UiRect.cpp  UiRoot.cpp
app/example/: CMakeLists.txt  ExampleConfig.hpp  ExampleConfig.hpp.in  PostProcessing.cpp  example.cpp
app/example/PostProcess/: DeletionQueue.hpp  VulkanEngine.cpp  VulkanEngine.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_images.cpp  vk_images.hpp  vk_pipelines.cpp  vk_pipelines.hpp  vk_types.hpp  vkinit.cpp  vkinit.hpp
app/example/data/shaders/: compileshaders.bat  triangle.vert
lib/: CMakeLists.txt
lib/engine/: CMakeLists.txt
lib/engine/include/helsinki/Engine/: Engine.hpp  EngineConfiguration.hpp  EngineScene.hpp
lib/engine/include/helsinki/Engine/ECS/: Component.hpp  ComponentTypeIDSystem.hpp  Entity.hpp  Event.hpp  EventListener.hpp  EventSystem.hpp  System.hpp
lib/engine/include/helsinki/Engine/Input/: InputManager.hpp
lib/engine/include/helsinki/Engine/Scene/: Scene.hpp
lib/engine/src/: Engine.cpp  EngineConfiguration.cpp  EngineScene.cpp
lib/engine/src/ECS/: ComponentTypeIDSystem.cpp  Entity.cpp
lib/engine/src/ECS/Components/: TransformComponent.cpp
lib/engine/src/Input/: InputManager.cpp
lib/engine/src/Scene/: Scene.cpp
lib/example/: CMakeLists.txt
lib/example/include/helsinki/Example/: ExampleConfiguration.hpp
lib/example/src/: ExampleConfiguration.cpp
lib/renderer/: CMakeLists.txt
lib/renderer/include/helsinki/Renderer/: ModelLoader.hpp  RendererConfiguration.hpp  TempModel.hpp
lib/renderer/src/: ModelLoader.cpp  RendererConfiguration.cpp  TempModel.cpp
lib/renderer/src/Resource/: BasicModelResource.cpp  CubemapTextureResource.cpp  FontResource.cpp  MaterialSystem.cpp  ModelResource.cpp  OffscreenImageResource.cpp  RasterisedFontResource.cpp  SignedDistanceFieldFontResource.cpp  StorageBufferResource.cpp  TextSystem.cpp  TextureResource.cpp  UniformBufferResource.cpp  VertexArrayResource.cpp
lib/renderer/src/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipelineResources.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanMappedBuffer.cpp  VulkanPipelineLayout.cpp  VulkanQueue.cpp  VulkanRenderpass.cpp  VulkanRenderpassResources.cpp  VulkanSemaphore.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSynchronisationContext.cpp  VulkanTexture.cpp  VulkanUniformBuffer.cpp
lib/renderer/src/Vulkan/RenderGraph/: GeneratedRenderGraph.cpp  RenderGraph.cpp  RenderGraphHelpers.cpp  RenderResourcesSystem.cpp  VulkanRenderGraphPipelineResources.cpp  VulkanRenderGraphRenderpassResources.cpp
lib/system/: CMakeLists.txt
lib/system/include/helsinki/System/: HelsinkiTracy.hpp  SystemConfiguration.hpp  Types.hpp  glm.hpp
lib/system/src/: SystemConfiguration.cpp
lib/system/src/Infrastructure/: Camera.cpp  Camera2D.cpp  FileManager.cpp  ThirdPersonCamera.cpp
lib/system/src/Utils/: Json.cpp  String.cpp  Xml.cpp
lib/userinterface/: CMakeLists.txt
lib/userinterface/include/helsinki/UserInterface/: DrawList.hpp  IWidget.hpp  InputEvent.hpp  Layout.hpp  LayoutEngine.hpp  Navigation.hpp  UiScene.hpp
lib/userinterface/src/: Layout.cpp  LayoutEngine.cpp  UiScene.cpp
lib/userinterface/src/Widgets/: ButtonBaseWidget.cpp  IWidget.cpp  RectWidget.cpp  TextWidget.cpp
(+119 files in other folders)
